--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "firebase-admin": "^13.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "mongoose-sequence": "^5.3.1",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
   },
   "keywords": [],
