--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "dayjs-plugin-utc": "^0.1.2",
     "moment": "^2.29.4",
     "qrcode": "^1.5.1",
     "react": "^18.3.1",
